--- a/Eevee/Eevee.csproj
+++ b/Eevee/Eevee.csproj
@@ -77,6 +77,7 @@
     <Compile Include="IPRecord.Designer.cs">
       <DependentUpon>IPRecord.cs</DependentUpon>
     </Compile>
+    <Compile Include="PacketScanner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SocketMonitor.cs">
